--- a/ui/common/src/main/res/values/colors.xml
+++ b/ui/common/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Carbon Fiber Palette -->
+    <color name="carbon_background">#121212</color>
+    <color name="carbon_surface">#1E1E1E</color>
+    <color name="electric_blue_accent">#00BFFF</color>
+    <color name="off_white_text">#E1E1E1</color>
+    <color name="medium_gray_text">#A8A8A8</color>
+
+    <!-- Base colors -->
     <color name="white">#FFFFFF</color>
     <color name="grey100">#f5f5f5</color>
     <color name="grey600">#757575</color>
