--- a/app/src/main/res/layout/onlinefeedview_activity.xml
+++ b/app/src/main/res/layout/onlinefeedview_activity.xml
@@ -5,16 +5,17 @@
     android:id="@+id/transparentBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="?attr/colorSurface">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="56dp"
-        android:elevation="16dp"
-        app:cardCornerRadius="8dp">
+        android:layout_marginHorizontal="0dp"
+        android:layout_marginVertical="0dp"
+        android:elevation="0dp"
+        app:cardCornerRadius="0dp">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainer"
